--- a/frontend/styles/header.module.css
+++ b/frontend/styles/header.module.css
@@ -1,24 +1,33 @@
 .header {
- display: flex;
- flex-direction: row;
- align-items: center;
- justify-content: space-between;
-  }
- 
-  .header ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    
-    
- }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  max-width: 100%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 
- .header li {
-    padding: 1rem;
-    color:#fff;  
- }
+.header ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  width: 50%;
+}
 
- .image {
-    color:#fff;
- }
+.header li {
+  padding: 1rem;
+  color: #fff;
+}
+
+.image {
+  width: 50%;
+}
+
+.text {
+  color: #fff;
+}
