--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,7 +1,60 @@
 .back {
   background-image: url("../public/rescue_header.jpg");
-  background-size: cover;
-  height: 750px;
+  background-size: 140%;
+  background-position: left 80% top 12%;
+  background-repeat: no-repeat;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  height: 60%;
+  box-shadow: inset 2000px 2000px rgba(0, 0, 0, 0.5);
   position: relative;
-  bottom: 14rem;
+}
+
+.text {
+  color: #fff;
+  width: 100%;
+  padding-top: 28rem;
+  margin-left: 6rem;
+  padding-bottom: 6rem;
+}
+
+.text h1 {
+  font-size: 5rem;
+  margin: 0;
+}
+
+.text p:nth-of-type(1) {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.text p:nth-of-type(2) {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.nav {
+  width: 100%;
+  background-color: #979794;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
+  padding: 1rem;
+}
+
+.btmbar {
+  color: #fff;
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 19%;
+}
+.btmbar p {
+  margin: 0;
 }
