--- a/frontend/styles/footer.module.css
+++ b/frontend/styles/footer.module.css
@@ -11,10 +11,24 @@
 }
 
 .logo {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    bottom: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  
+}
+
+.footinfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  color: #fff;
+}
+
+.footermid {
+  position: relative;
+  left: 40rem;
 }
