--- a/frontend/styles/footer.module.css
+++ b/frontend/styles/footer.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: #979794;
   display: flex;
+  height: 21rem;
 }
 
 .footernav li {
@@ -30,5 +31,12 @@
 
 .footermid {
   position: relative;
-  left: 40rem;
+  left: 20rem;
+}
+
+.footerright {
+  display: flex;
+  justify-content: right;
+  flex-direction: column;
+  width: 20%;
 }
