--- a/frontend/styles/footer.module.css
+++ b/frontend/styles/footer.module.css
@@ -17,7 +17,6 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  
 }
 
 .footinfo {
@@ -37,6 +36,17 @@
 .footerright {
   display: flex;
   justify-content: right;
+  align-items: right;
+  text-align: right;
   flex-direction: column;
-  width: 20%;
+  width: 40%;
+  position: relative;
+  top: 3rem;
+  left: 3rem;
+}
+
+.footerright ul {
+  list-style-type: none;
+  line-height: 25px;
+  color: #fff;
 }
