--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,9 +1,19 @@
 html,body {
     margin: 0;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
