--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,6 +1,6 @@
 .back {
   background-size: 140%;
-  background-position: left 80% top 12%;
+  background-position: left 80% top 36%;
   background-repeat: no-repeat;
   width: 100%;
   display: flex;
@@ -65,6 +65,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    
   }
   .back {
     position: relative;
@@ -278,6 +279,7 @@
   padding: 1rem;
   margin: 0;
   font-size: 1.2rem;
+  min-height: 336.5px;
 }
 
 .product li {
