--- a/frontend/styles/casesjs.module.css
+++ b/frontend/styles/casesjs.module.css
@@ -2,7 +2,7 @@
   width: 40%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 
