--- a/frontend/styles/news.module.css
+++ b/frontend/styles/news.module.css
@@ -34,6 +34,7 @@
   border-bottom-left-radius: 50px;
   padding: 1rem;
   margin-top: 6rem;
+  position: relative;
 }
 
 .attorneybar p {
@@ -46,4 +47,22 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+}
+
+.newsArts {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.dropStatus {
+  position: absolute;
+  right: 2rem;
+  font-size: 1rem;
+  text-decoration: underline;
+  font-weight: 700;
+  top: 40%;
+  bottom: 40%;
 }
