--- a/frontend/styles/casesjs.module.css
+++ b/frontend/styles/casesjs.module.css
@@ -2,7 +2,7 @@
   width: 40%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   text-align: left;
 }
@@ -12,6 +12,7 @@
    justify-content: center; 
    align-items: center;
    text-align: center;
+   width: 100%;
 }
 
 .cases h2 {
