--- a/frontend/styles/news.module.css
+++ b/frontend/styles/news.module.css
@@ -45,7 +45,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
 }
 
@@ -53,7 +53,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
 }
 
