--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,13 +1,14 @@
-html,body {
-    margin: 0;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    font-family: 'Poppins'
+html,
+body {
+  margin: 0;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  font-family: "Poppins";
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 body::-webkit-scrollbar {
@@ -17,4 +18,8 @@ body::-webkit-scrollbar {
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+h1, p {
+  margin: 0;
 }
