--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -87,6 +87,21 @@
   margin: 0;
 }
 
+.textAnim h1 {
+  font-size: 5rem;
+  margin: 0;
+}
+
+.textAnim p:nth-of-type(1) {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.textAnim p:nth-of-type(2) {
+  font-size: 1rem;
+  margin: 0;
+}
+
 @media screen and (max-width: 1029px) {
   .text h1 {
     font-size: 3rem;
