--- a/frontend/styles/Footerstyles.module.css
+++ b/frontend/styles/Footerstyles.module.css
@@ -35,14 +35,15 @@
 
 .bottomText {
   position: absolute;
-  bottom: 0;
+  bottom: 0.5rem;
   width: 90%;
   left: 5%;
   right: 5%;
+  font-size: 0.8rem;
 }
 
 .footermid {
-  width: 25%;
+  width: 30%;
   margin-bottom: 4rem;
 }
 
@@ -100,6 +101,14 @@
   margin-right: 0;
   margin-top: 0;
   font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.rightNav li {
+  cursor: pointer;
+}
+
+.rightNav li:hover {
   font-weight: 700;
 }
 
