--- a/frontend/styles/attorneys.module.css
+++ b/frontend/styles/attorneys.module.css
@@ -2,13 +2,15 @@
   display: flex;
   margin-top: 4rem;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .phoneemail {
   display: flex;
   flex-direction: column;
   width: 20%;
+  justify-content: center;
+  align-items: center;
 }
 
 .peclass {
@@ -69,7 +71,6 @@
   display: flex;
   color: #002d62;
   flex-direction: column;
-  margin-left: 2rem;
 }
 
 .seals {
