--- a/frontend/styles/news.module.css
+++ b/frontend/styles/news.module.css
@@ -1,20 +1,32 @@
 .news {
+  color: #002d62;
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
-  color: #002d62;
+  align-items: center;
+  width: 100%;
+  margin-top: 4rem;
 }
 
 .newspara {
-  width: 50%;
-  margin-left: 3rem;
-  text-align: justify;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin-top: 4rem;
 }
 
-.img {
-  float: left;
-  margin: 1rem;
-  margin-right: 2rem;
+.newsParaTxt {
+  width: 50%;
+  color: #002d62;
+  margin-left: 6rem;
+}
+
+.newsParaTxt h3 {
+  font-size: 2rem;
+}
+
+.newsParaTxt p {
+  font-size: 1.2rem;
 }
 
 .spacer {
