--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   justify-content: flex-start;
   align-items: flex-end;
-  height: 60%;
+  height: 100%;
   box-shadow: inset 2000px 2000px rgba(0, 0, 0, 0.5);
   position: relative;
   display: flex;
@@ -62,6 +62,7 @@
 
 .aiLogo {
   z-index: 18;
+  margin-bottom: -1rem;
 }
 
 @keyframes fade {
