--- a/frontend/styles/news.module.css
+++ b/frontend/styles/news.module.css
@@ -29,6 +29,16 @@
   font-size: 1.2rem;
 }
 
+@media screen and (max-width: 824px) {
+  .newspara {
+    flex-direction: column;
+    text-align: center;
+  }
+  .newsParaTxt {
+    margin: 0;
+  }
+}
+
 .spacer {
   display: flex;
   justify-content: flex-end;
