--- a/frontend/styles/Headerstyles.module.css
+++ b/frontend/styles/Headerstyles.module.css
@@ -96,13 +96,18 @@
 }
 
 .navDropdown2 {
-  position: absolute;
+  position: relative;
   display: flex;
   left: 0;
+  margin-top: -42%;
+  width: 25vw;
+  height: 40vh;
 }
+
 
 .navDropdown2 li {
   background-color: #ededed;
+  position: relative;
 }
 
 .navList {
