--- a/frontend/styles/attorneys.module.css
+++ b/frontend/styles/attorneys.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   width: 20%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .peclass {
@@ -71,6 +71,8 @@
   display: flex;
   color: #002d62;
   flex-direction: column;
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
 
 .seals {
@@ -78,4 +80,12 @@
   justify-content: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.headshot {
+  width: 24rem;
+  height: 24rem;
+  border-radius: 25px;
+  object-fit: cover;
+  object-position: top;
 }
