--- a/frontend/styles/talk.module.css
+++ b/frontend/styles/talk.module.css
@@ -231,3 +231,43 @@
 .btn2 {
   margin-top: 5rem;
 }
+
+.contactinfo {
+  margin-top: 2rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .formArea form {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .formLeft textarea {
+    margin-bottom: 1rem;
+  }
+  .spacer {
+    width: 100%;
+  }
+  .attorneybar {
+    width: 80%;
+  }
+  .contactinfo {
+    width: 120%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .formArea input {
+    width: 90%; 
+  }
+  .formArea textarea {
+    width: 90%;
+  }
+  .formArea select {
+    width: 97%;
+  }
+  .formLeft, .formRight {
+    width: 100%;
+  }
+}
