--- a/frontend/styles/attorneys.module.css
+++ b/frontend/styles/attorneys.module.css
@@ -2,8 +2,7 @@
   display: flex;
   margin-top: 4rem;
   justify-content: center;
-  align-items: center;
-  flex-flow: column;
+  align-items: flex-start;
 }
 
 .phoneemail {
