--- a/frontend/styles/Insurance.module.css
+++ b/frontend/styles/Insurance.module.css
@@ -128,3 +128,22 @@
 .dropBody p {
   width: 90%;
 }
+
+
+@media (max-width: 1024px) {
+  .sec1 {
+    display: column;
+    flex-direction: column;
+  }
+  .attorneybar {
+    width: 100%;
+    display: column;
+    flex-direction: column;
+  }
+
+  .sec1Txt {
+    width: 70%;
+    text-align: left;
+    margin-left: 0;
+  }
+}
