--- a/frontend/styles/articlesjs.module.css
+++ b/frontend/styles/articlesjs.module.css
@@ -1,10 +1,10 @@
 .articles {
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  text-align: left;
+   width: 10%;
+   display: flex;
+   justify-content: center;
+   align-items: flex-start;
+   flex-direction: column;
+   text-align: left;
 }
 
 .newcases {
@@ -110,4 +110,21 @@
    cursor: pointer;
    color: #002d62;
    text-decoration: underline;
+}
+
+@media (min-width: 1440px) {
+   .articles {
+      width: 20%;
+   }
+}
+
+@media (max-width: 1024px) {
+   .articles {
+      width: 40%;
+      margin-left: 15%;
+   }
+}
+
+.newcases {
+   margin-left: -25%;
 }
