--- a/frontend/styles/news.module.css
+++ b/frontend/styles/news.module.css
@@ -89,3 +89,28 @@
   bottom: 40%;
 
 }
+
+@media (max-width: 1024px) {
+  .newspara {
+    display: column;
+    flex-direction: column;
+  }
+  .attorneybar {
+    width: 80%;
+    display: column;
+    flex-direction: column;
+  }
+
+  .newsParaTxt {
+    width: 70%;
+    text-align: left;
+    margin-left: 0;
+  }
+
+  .newsArts, .caseSec {
+    display: column;
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
