--- a/frontend/styles/talk.module.css
+++ b/frontend/styles/talk.module.css
@@ -38,6 +38,8 @@
 .msgsvg {
   display: flex;
   justify-content: center;
+  width: 80%;
+  margin-left: 8em;
 }
 
 .msginfo {
@@ -49,7 +51,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  right: 18rem;
+  right: 5em;
 }
 
 .lpara {
@@ -255,7 +257,40 @@
   .contactinfo {
     width: 120%;
   }
+
+  .location {
+    right: 10em;
+  }
+
+  .msgsvg {
+    width: 80%;
+    margin-left: 7%;
+  }
 }
+
+@media (max-width: 768px) {
+  .msgsvg, .contactinfo {
+    flex-direction: column;
+  }
+
+  .location {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10%;
+  }
+
+  .lpara, .fax, .phone {
+    left: 0;
+    margin-top: 25px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .attorneybar {
+    margin-right: 5%;
+  }
+}
+
 
 @media screen and (max-width: 425px) {
   .formArea input {
@@ -269,5 +304,16 @@
   }
   .formLeft, .formRight {
     width: 100%;
+  }
+
+  .location {
+    left: -20%;
+  }
+
+}
+
+@media (max-width: 600px) {
+  .location {
+    margin-left: 20%;
   }
 }
