Add dropdown images

--- a/frontend/styles/Business.module.css
+++ b/frontend/styles/Business.module.css
@@ -122,8 +122,10 @@
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   object-fit: cover;
-  height: 24rem;
+  height: 15rem;
+  margin: 1.5em 0;
 }
+
 .dropBody p {
   width: 90%;
 }
