--- a/frontend/styles/articlesjs.module.css
+++ b/frontend/styles/articlesjs.module.css
@@ -89,8 +89,8 @@
 }
 
 .controls img {
-   width: 3rem;
-   height: 3rem;
+   width: 2rem;
+   height: 2rem;
    cursor: pointer;
 }
 
@@ -102,6 +102,8 @@
    color: #002d62;
    margin-left: 2rem;
    margin-right: 2rem;
+   font-size: 8px;
+
 }
 
 .close {
@@ -110,6 +112,7 @@
    cursor: pointer;
    color: #002d62;
    text-decoration: underline;
+   width: 5%;
 }
 
 @media (min-width: 1440px) {
